tests/ui/feature-gates/feature-gate-cfg-target-abi.stderr
error[E0658]: `cfg(target_abi)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-abi.rs:1:7
   |
LL | #[cfg(target_abi = "x")]
   |       ^^^^^^^^^^^^^^^^
   |
   = note: see issue #80970 <https://github.com/rust-lang/rust/issues/80970> for more information
   = help: add `#![feature(cfg_target_abi)]` to the crate attributes to enable

error[E0658]: `cfg(target_abi)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-abi.rs:4:12
   |
LL | #[cfg_attr(target_abi = "x", x)]
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #80970 <https://github.com/rust-lang/rust/issues/80970> for more information
   = help: add `#![feature(cfg_target_abi)]` to the crate attributes to enable

error[E0658]: `cfg(target_abi)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-abi.rs:7:19
   |
LL | #[cfg(not(any(all(target_abi = "x"))))]
   |                   ^^^^^^^^^^^^^^^^
   |
   = note: see issue #80970 <https://github.com/rust-lang/rust/issues/80970> for more information
   = help: add `#![feature(cfg_target_abi)]` to the crate attributes to enable

error[E0658]: `cfg(target_abi)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-abi.rs:11:10
   |
LL |     cfg!(target_abi = "x");
   |          ^^^^^^^^^^^^^^^^
   |
   = note: see issue #80970 <https://github.com/rust-lang/rust/issues/80970> for more information
   = help: add `#![feature(cfg_target_abi)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
